[package]
name = "bevy-cross-gizmo"
version = "0.14.0"
edition = "2021"
categories = ["game-engines", "graphics", "gui", "rendering"]
description = "Adds `cross` and `cross_2d` gizmos to Bevy."
homepage = "https://bevyengine.org"
keywords = ["game", "engine", "gamedev", "graphics", "bevy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lubomirkurcak/bevy-cross-gizmo"

[dependencies]
bevy = "0.14.0"
